# woldlab-rna-seq

./: .gitattributes  .gitignore  ChangeLog.rst  LICENSE.txt  MANIFEST.in  README.rst  align-star-se.condor  bedgraph-star.condor  bedgraph2bigwig.condor  madqc.py  make_dag.py  make_star_rsem_dag.py  makersemcsv.py  models.py  pyproject.toml  qc-coverage.condor  qc-distribution.condor  qc-samstats.condor  quant-rsem.condor  report.py  requirements.txt  setup.cfg  setup.py  sort-samtools.condor  tox.ini
.github/workflows/: ci-test.yml
containers/: bullseye-bash.def  rsem-1.2.31.def  scanpy-pip.def  star-2.5.1b.def  star-bash-2.7.10a.def  star-bash-dev_EoI_2.7.9a-2021-09.10.def  ucsc-tools.def
docs/: Makefile  api.rst  commands.rst  conf.py  development.rst  example.rst  howto.rst  index.rst  installation.rst  make.bat  overview.rst  reference.rst  singlecell.rst
woldrnaseq/: __init__.py  _version.py  align-star.condor  bam2bigwig_stranded.condor  bam2bigwig_unstranded.condor  bedgraph-star.condor  bedgraph2bigwig.condor  bedsort.sh  common.py  compute_read_distribution.py  downloader.py  downsample_fastq.py  gene_coverage_wig_gtf.py  gff2table.py  gtfcache.py  index-samtools.condor  madqc.condor  madqc.py  make_bigwig.py  make_dag.py  make_fastqc.py  make_picard_refflat.py  make_picard_rrna_intervals.py  make_star_rsem_dag.py  make_trackhub.py  make_tracks.py  makersemcsv.condor  makersemcsv.py  makestarcsv.py  merge_encode_annotations.py  models.py  parse_picard_markdup.py  picard-markdup.condor  picard-multi-metrics.condor  plot_coverage.py  plot_genes_detected.py  post_star  pre_star  qc-coverage.condor  qc-distribution.condor  (+15 more)
woldrnaseq/bokeh/: correlation.py  coverage.py  gene_coverage.py  gene_coverage_tsne.py  genes_detected.py
woldrnaseq/iplots/: __init__.py  correlation.py  coverage.py  distribution.py  (+5 more)
workflow/: build-index.snakefile  cram.snakefile  process-encode-10x.snakefile  process-encode-bulk-rna-star-rsem.snakefile  process-encode-split-subpool.snakefile  process-encode-splitseq.snakefile  star-solo-10x.snakefile  starsolo.snakefile  tracks.snakefile
(+97 files in other folders)
