[metadata]
name = woldrnaseq
description=Pipelines intended for use in the ENCODE4 project
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD-3
license_file = LICENSE.txt
author = Diane Trout
author_email = diane@caltech.edu
project_urls =
   Source = https://github.com/detrout/woldlab-rna-seq
   Tracker = https://github.com/detrout/woldlab-rna-seq

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools_scm
install_package_data = True
install_requires =
    bokeh >= 0.12.10,<1.0
    encoded_client >= 0.1
    jinja2 >= 2.8
    lxml
    matplotlib >= 3.0
    mex_gene_archive >= 0.2.1
    numpy >= 1.16
    pandas >= 0.23
    pysam
    requests
    scipy >= 1.1
    tables >= 3.4
    xopen

[options.package_data]
woldrnaseq =
    *.condor
    *.sh
    pre_star
    post_star
woldrnaseq.templates =
    *.dagman
    *.html

[options.entry_points]
console_sripts =
    madqc = woldrnaseq.madqc:main
    make_dag = woldrnaseq.make_dag:main
    make_rsem_csv = woldrnaseq.makersemcsv:main
    make_star_csv = woldrnaseq.makestarcsv:main
    qc_report = woldrnaseq.report:main
    make_trackhub = woldrnaseq.make_trackhub:main
    plot_genes_detected = woldrnaseq.plot_genes_detected:main
    merge_encode_annotations = woldrnaseq.merge_encode_annotations:main

[options.extras_require]
test =
    pytest
tracks =
    trackhub
htsworkflow =
    htsworkflow

[versioneer]
VCS=git
style=pep440
versionfile_source=woldrnaseq/_version.py
versionfile_build=woldrnaseq/_version.py
tag_prefix=
parentdir_prefix=long-rna-seq-condor